# IntroToProgramming2023

./: CMakeLists.txt  README.md
src/: avltree.cpp  avltree.hpp  bintree.cpp  bintree.hpp  data_base.cpp  generators.cpp  generators.hpp  main_avl.cpp  main_bin.cpp
tests/: test_avltree.cpp  test_bintree.cpp
